--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -6,6 +6,7 @@ on:
     branches: [ "main" ]
 env:
   CARGO_TERM_COLOR: always
+  DATABASE_URL: postgresql://postgres:postgres@localhost:5432/stigmergy
   TEST_DATABASE_URL: postgresql://postgres:postgres@localhost:5432/stigmergy
 jobs:
   build:
