--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -34,6 +34,8 @@ jobs:
         key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
         restore-keys: |
           ${{ runner.os }}-cargo-
+    - name: cargo sqlx migrate
+      run: cargo sqlx migrate run
     - name: cargo clippy
       run: cargo clippy --all-targets -- -D clippy::all -D warnings
     - name: cargo test
